RESOLVED FIXED258183
ASSERTION FAILED: firstChild():[ macOS ] media/track/track-cues-missed.html is a flaky test.
https://bugs.webkit.org/show_bug.cgi?id=258183
Summary ASSERTION FAILED: firstChild():[ macOS ] media/track/track-cues-missed.html i...
Bri Harris
Reported 2023-06-15 20:14:31 PDT
media/track/track-cues-missed.html is a flaky crash on macOS Debug queues and a flaky text failure on Monterey release. HISTORY: https://results.webkit.org/?suite=layout-tests&test=media%2Ftrack%2Ftrack-cues-missed.html DIFF TEXT: @@ -4,46 +4,6 @@ EVENT(canplaythrough) EXPECTED (testTrack.track.cues.length == '7') OK RUN(video.play()) - -EVENT(enter) -EXPECTED (testTrack.track.cues.getCueById(cueCount).text == 'I said Bear is coming now!!!!') OK -EXPECTED (currentCue.id == '3') OK - -EVENT(exit) -EXPECTED (testTrack.track.cues.getCueById(cueCount).text == 'I said Bear is coming now!!!!') OK -EXPECTED (currentCue.id == '3') OK - -EVENT(enter) -EXPECTED (testTrack.track.cues.getCueById(cueCount).text == 'This is the second missed cue in the test.') OK -EXPECTED (currentCue.id == '4') OK - -EVENT(exit) -EXPECTED (testTrack.track.cues.getCueById(cueCount).text == 'This is the second missed cue in the test.') OK -EXPECTED (currentCue.id == '4') OK - -EVENT(enter) -EXPECTED (testTrack.track.cues.getCueById(cueCount).text == 'Third missed cue - zero-length cue.') OK -EXPECTED (currentCue.id == '5') OK - -EVENT(exit) -EXPECTED (testTrack.track.cues.getCueById(cueCount).text == 'Third missed cue - zero-length cue.') OK -EXPECTED (currentCue.id == '5') OK - -EVENT(enter) -EXPECTED (testTrack.track.cues.getCueById(cueCount).text == 'Fourth missed cue.') OK -EXPECTED (currentCue.id == '6') OK - -EVENT(exit) -EXPECTED (testTrack.track.cues.getCueById(cueCount).text == 'Fourth missed cue.') OK -EXPECTED (currentCue.id == '6') OK - -EVENT(enter) -EXPECTED (testTrack.track.cues.getCueById(cueCount).text == 'Negative length cue. Should be treated correctly.') OK -EXPECTED (currentCue.id == '7') OK - -EVENT(exit) -EXPECTED (testTrack.track.cues.getCueById(cueCount).text == 'Negative length cue. Should be treated correctly.') OK -EXPECTED (currentCue.id == '7') OK EVENT(ended) END OF TEST
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-15 20:14:49 PDT
Bri Harris
Comment 2 2023-06-15 20:15:08 PDT
STDERR TEXT: ASSERTION FAILED: firstChild() rendering/RenderVTTCue.cpp(79) : bool WebCore::RenderVTTCue::initializeLayoutParameters(WebCore::LayoutUnit &, WebCore::LayoutUnit &) 1 0x16bb34308 WTFCrash 2 0x10a9a0490 WTF::Ref<WebCore::AudioWorkletThread, WTF::RawPtrTraits<WebCore::AudioWorkletThread> >::operator->() const 3 0x10d7f4984 WebCore::RenderVTTCue::initializeLayoutParameters(WebCore::LayoutUnit&, WebCore::LayoutUnit&) 4 0x10d7f453c WebCore::RenderVTTCue::repositionCueSnapToLinesSet() 5 0x10d7f44c4 WebCore::RenderVTTCue::layout() 6 0x10c50ed1c WebCore::RenderElement::layoutIfNeeded() 7 0x10d539150 WebCore::RenderBlock::layoutPositionedObject(WebCore::RenderBox&, bool, bool) 8 0x10d537ce8 WebCore::RenderBlock::layoutPositionedObjects(bool, bool) 9 0x10d53787c WebCore::RenderBlock::simplifiedLayout() 10 0x10d551bd0 WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) 11 0x10d535f60 WebCore::RenderBlock::layout() 12 0x10c50ed1c WebCore::RenderElement::layoutIfNeeded() 13 0x10d539150 WebCore::RenderBlock::layoutPositionedObject(WebCore::RenderBox&, bool, bool) 14 0x10d537ce8 WebCore::RenderBlock::layoutPositionedObjects(bool, bool) 15 0x10d552298 WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) 16 0x10d535f60 WebCore::RenderBlock::layout() 17 0x10d668bf0 WebCore::RenderImage::layoutShadowContent(WebCore::LayoutSize const&) 18 0x10d6687dc WebCore::RenderImage::layout() 19 0x10d72e1fc WebCore::RenderMedia::layout() 20 0x10d7f6a78 WebCore::RenderVideo::layout() 21 0x10c50ed1c WebCore::RenderElement::layoutIfNeeded() 22 0x10d556b64 WebCore::RenderBlockFlow::layoutModernLines(bool, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 23 0x10d5545ec WebCore::RenderBlockFlow::layoutInlineChildren(bool, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 24 0x10d552bc0 WebCore::RenderBlockFlow::layoutInFlowChildren(bool, WebCore::LayoutUnit&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 25 0x10d551df0 WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) 26 0x10d535f60 WebCore::RenderBlock::layout() 27 0x10d5556d4 WebCore::RenderBlockFlow::layoutBlockChild(WebCore::RenderBox&, WebCore::RenderBlockFlow::MarginInfo&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 28 0x10d554934 WebCore::RenderBlockFlow::layoutBlockChildren(bool, WebCore::LayoutUnit&) 29 0x10d552bfc WebCore::RenderBlockFlow::layoutInFlowChildren(bool, WebCore::LayoutUnit&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) 30 0x10d551df0 WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) 31 0x10d535f60 WebCore::RenderBlock::layout() com.apple.WebKit.WebContent.Development terminated (pid 87878) for reason: crash LEAK: 1 WebPageProxy
Eric Carlson
Comment 3 2023-06-22 11:36:37 PDT
EWS
Comment 4 2023-06-22 12:39:06 PDT
Committed 265420@main (b33adedfb117): <https://commits.webkit.org/265420@main> Reviewed commits have been landed. Closing PR #15205 and removing active labels.
EWS
Comment 5 2023-07-26 14:46:59 PDT
Test gardening commit 266332@main (934e4c3d038b): <https://commits.webkit.org/266332@main> Reviewed commits have been landed. Closing PR #16113 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.