ASSERTION FAILED: firstChild():[ macOS ] media/track/track-cues-missed.html is a flaky test. https://bugs.webkit.org/show_bug.cgi?id=258183 rdar://110876540

Reviewed by Andy Estes.

* Source/WebCore/rendering/RenderVTTCue.cpp:
(WebCore::RenderVTTCue::isOutside const): Return early if firstChild() return null.
(WebCore::RenderVTTCue::isOverlapping const): Ditto.
(WebCore::RenderVTTCue::overlappingObject const): Ditto.
(WebCore::RenderVTTCue::moveIfNecessaryToKeepWithinContainer): Ditto.
(WebCore::RenderVTTCue::findNonOverlappingPosition const): Ditto.

Canonical link: https://commits.webkit.org/265420@main